--- a/Odev.1
+++ b/Odev.1
@@ -11,7 +11,10 @@ Sınıf | Öğrenci İsmi  | Numara
 ## Özet
 Çalışan bir kum saatinin ağırlığı, dinlenme sırasındaki kum saatinin ağırlığından sapar.Bunun sebebi kısaca
 şöyle açıklanabilir,
-En başta yukarıdaki bölmede olan kum tanecikleri aşağıya geçiş başladığında üst bölmeden ayrılıp diğer bölmeye doğru yola çıkar.Diğer bölmeye varana kadar havada olan tanecikler saatin ağırlığına etki etmez.Bundan dolayı saatin ağırlığı azalır.Tanecikler hızlanıp aşağıya ulaştığında ağırlık birden artar.Çünkü tanecikler hızla çarpar.Hızdan dolayı ağırlık artmış olarak devam eder.Son tanecikler yola çıktığında hızlanır ve alt bölmeye ulaştığında ağırlığı arttırır.Hareketlilik bittiğinde saat eski ağırlığına geri döner.
+En başta yukarıdaki bölmede olan kum tanecikleri aşağıya geçiş başladığında üst bölmeden ayrılıp diğer bölmeye doğru yola çıkar.
+Diğer bölmeye varana kadar havada olan tanecikler saatin ağırlığına etki etmez.Bundan dolayı saatin ağırlığı azalır.
+Tanecikler hızlanıp aşağıya ulaştığında ağırlık birden artar.Çünkü tanecikler hızla çarpar.Hızdan dolayı ağırlık artmış olarak devam eder.
+Son tanecikler yola çıktığında hızlanır ve alt bölmeye ulaştığında ağırlığı arttırır.Hareketlilik bittiğinde saat eski ağırlığına geri döner.
 ## Kaynakçalar  
 http://demoweb.physics.ucla.edu/content/110-weight-hourglass
 http://aapt.scitation.org/doi/full/10.1119/1.4973527
